--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "loguru>=0.7.3",
     "pydantic-settings>=2.11.0",
     "pyrogram>=2.0.106",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "tgcrypto>=1.2.5",
     "tortoise-orm>=0.25.1",
 ]
 
