--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aerich[toml]>=0.9.2",
     "aiogram>=3.22.0",
+    "aiolimiter>=1.2.1",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.119.0",
     "loguru>=0.7.3",
